fix: implemented multi-reactor pattern